kotlin.web.demo.test/testData/errors/fromKotlin.kt
class Test() {
    class object {
        fun init2() {}
    }
    fun run() {
        val a = object : Iterator<Int> {}
    }
}
